--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,17 @@ repositories {
 
 dependencies {
     testImplementation (
-            "com.codeborne:selenide:6.19.1",
-            "org.junit.jupiter:junit-jupiter:5.9.3")
+            "com.codeborne:selenide:7.2.3",
+            "org.junit.jupiter:junit-jupiter:5.9.3",
+            "org.assertj:assertj-core:3.23.1",
+            "com.codeborne:pdf-test:1.7.0",
+            "com.opencsv:opencsv:5.7.1",
+            "com.codeborne:xls-test:1.4.3",
+            "org.json:json:20240303",
+            "com.google.code.gson:gson:2.10",
+            "com.fasterxml.jackson.core:jackson-databind:2.14.1",
+            "com.fasterxml.jackson.core:jackson-core:2.13.1",
+            "com.github.javafaker:javafaker:1.0.2")
 }
 
 tasks.withType(JavaCompile).configureEach {
